--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,16 @@
+/* ?CSS RESET */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+/* ?GENERALS */
+/* Fonts */
+body {
+    font-family: Montserrat, 'Helvetica Neue', sans-serif;
+}
+
+header h1 {
+    font-family: 'Nerko One', cursive;
 }
