--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+/* ?CSS PROPERTIES */
+
+/* Colors */
+:root {
+    --primarycolor: #f7972e;
+}
+
+
 /* ?CSS RESET */
 * {
     margin: 0;
@@ -6,6 +14,7 @@
 }
 
 /* ?GENERALS */
+
 /* Fonts */
 body {
     font-family: Montserrat, 'Helvetica Neue', sans-serif;
@@ -13,4 +22,12 @@ body {
 
 header h1 {
     font-family: 'Nerko One', cursive;
+}
+
+/* ?HEADER */
+
+header h1 {
+    color: var(--primarycolor);
+    text-align: center;
+    font-size: 3rem;
 }
